# upir

./: .gitignore  .pylintrc  404.html  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  OWNERS  README.md  TEST_STATUS.md  generate_figures.py  generate_figures_simple.py  generate_plots_embedded.py  generate_real_example.py  generate_without_z3.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_with_z3.py
architecture_spec/: index.html
defensive_publication/: COMPLETE_DISCLOSURE.md  DISCLOSURE_COVER_SHEET.md  README_SUBMISSION_PACKAGE.md  UPIR_Defensive_Publication_2025.aux  UPIR_Defensive_Publication_2025.out  UPIR_Defensive_Publication_2025.tex  generate_latex_pdf.py  generate_submission_pdf.sh  paper_v3_full.md  upir_disclosure.aux  upir_disclosure.out  upir_disclosure.tex  upir_disclosure.toc
docs/: architecture_spec.md  index.md  td_commons_summary.md
examples/: ACTUAL_upir_circuit_breaker.py  ACTUAL_upir_queue_worker.py  ACTUAL_upir_rate_limiter.py  README.md  Z3_optimized_high_throughput.py  Z3_optimized_low_throughput.py  end_to_end_demo.py  enhanced_upir_demo.py  learning_demo.py  pattern_discovery_demo.py  payment_system.upir  simple_enhanced_demo.py  streaming_example.py  streaming_pipeline.py  synthesis_demo.py
paper/: MISSING_FROM_V0.md  appendices.md  generate_pdf.py  paper.md  paper_v0.md  paper_v1.md  paper_v2.md  paper_v4_COMPLETE.md
results/: cloud_monitoring_metrics.json  learning_convergence_results.json
search/: search_index.json
td_commons_summary/: index.html
tests/: test_codegen.py  test_compositional.py  test_documentation_examples.py  test_integration.py  test_learning.py  test_models.py  test_patterns.py  (+4 more)
(+149 files in other folders)
